Fix cart counter design and change arrow function to normal function

--- a/template/index.html
+++ b/template/index.html
@@ -170,7 +170,7 @@
         <div id="my-cart">
           <div>
             <span class="panel-header">My Cart</span>
-            <span class="panel-header">(0/5)</span>
+            <span>(0/5)</span>
           </div>
           <hr>
           <ul class="cart-list">
