--- a/template/index.html
+++ b/template/index.html
@@ -149,7 +149,7 @@
         </span>
       </div>
 
-      <!-- LEFT BAR PANEL -->
+      <!-- LEFT BAR ADD PANEL -->
 
       <div id="panel">
         
@@ -180,10 +180,10 @@
             <button type="button" class="add-to-webBTN" onclick="add_elements_to_stage()">Add to my Website</button>
           </div>   
         </div>
-        <i class="fas fa-times-circle close_panel_btn" onclick="close_add_panel()"></i>
+        <i class="fas fa-times-circle close_panel_btn" title="Close" onclick="close_add_panel()"></i>
 
       </div>
-      <!-- ENDOF LEFT BAR PANEL -->
+      <!-- ENDOF LEFT BAR ADD PANEL -->
 
 
 
